--- a/flask_qa/templates/base.html
+++ b/flask_qa/templates/base.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Questions & Answers</a>
+          <a class="navbar-brand" href="{{ url_for('main.index') }}">Questions & Answers</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
