--- a/flask_qa/templates/home.html
+++ b/flask_qa/templates/home.html
@@ -8,13 +8,13 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="list-group">
-            
-              <a href="" class="list-group-item">
-                <h4 class="list-group-item-heading"></h4>
-                <p class="list-group-item-text"></p>
-                <p class="list-group-item-text"></p>
+            {% for question in questions %}
+              <a href="{{ url_for('main.question', question_id=question.id) }}" class="list-group-item">
+                <h4 class="list-group-item-heading">{{ question.question }}</h4>
+                <p class="list-group-item-text">Asked by: {{ question.asker.name }}</p>
+                <p class="list-group-item-text">Answered by: {{ question.expert.name }}</p>
               </a>
-            
+            {% endfor %}
           </div>
         </div><!-- /.col-lg-12 -->
       </div>
