--- a/flask_qa/templates/login.html
+++ b/flask_qa/templates/login.html
@@ -2,6 +2,12 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
+      {% for message in get_flashed_messages() %}
+        <div class="alert alert-danger">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+        </div>
+      {% endfor %}
       <div class="page-header">
         <h1>Login</h1>
       </div>
